--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
 </head>
 <body>
     <h1>Edgardo Jose M. Tolentino</h1>
@@ -14,7 +14,7 @@
 <hr/>
 <h2>Education</h2>
 <ul>
-    <li>Bulacan Monterssori School Inc. <br> 2013-2017 <br> Jr. High School</li>\
+    <li>Bulacan Monterssori School Inc. <br> 2013-2017 <br> Jr. High School</li>
     <li>Dr. Yanga's Colleges Inc. <br> 2017-2019 <br> Sr. High School</li>
     <li>Bulacan State University <br> 2019-present <br> Bachelor of Science in Information Techonology <br>
         On the Job Training: ATA Accenture Philippines 
